# ecommerce-example

./: .restyled.yaml  Makefile  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.kong.yml  docker-compose.yml  setup.cfg
api_gateway/: Dockerfile  config.yml  pyproject.toml
api_gateway/src/: __init__.py  cli.py  login_controller.py
api_gateway/src/controllers/: __init__.py  order.py  product.py
api_gateway/tests/: test_api_gateway.py  utils.py
api_gateway/tests/mock_servers/: server.py
api_gateway/tests/test_controllers/: test_order.py  test_product.py
discovery/: .dockerignore  (+3 more)
integration_tests/: includes.yaml  pyproject.toml  test_minimal.tavern.yaml
integration_tests/discovery/: test_discovery.tavern.yaml
integration_tests/services/payment_provider/: config.py
microservices/authentication/: Dockerfile  config.yml  pyproject.toml
microservices/authentication/src/: __init__.py  aggregates.py  cli.py  jwt_env.py
microservices/authentication/src/commands/: __init__.py  sagas.py  services.py
microservices/authentication/src/queries/: __init__.py  exceptions.py  models.py  repositories.py  services.py
microservices/authentication/tests/: test_aggregates.py  utils.py
microservices/authentication/tests/test_commands/: test_services.py
microservices/authentication/tests/test_queries/: test_services.py
microservices/cart/: Dockerfile  config.yml  pyproject.toml
microservices/cart/src/: __init__.py  aggregates.py  cli.py  controllers.py  sagas.py  services.py
microservices/cart/src/commands/: __init__.py  services.py
microservices/cart/src/queries/: __init__.py  models.py  repositories.py  services.py
microservices/cart/src/sagas/: __init__.py  add_cart_item.py  remove_cart_item.py
microservices/cart/tests/: test_aggregates.py
microservices/cart/tests/test_commands/: test_commands.py
microservices/cart/tests/test_queries/: test_services.py
microservices/customer/: Dockerfile  config.yml  pyproject.toml
microservices/customer/src/: __init__.py  aggregates.py  cli.py
microservices/customer/src/commands/: __init__.py  services.py
microservices/customer/src/queries/: __init__.py  services.py
microservices/customer/tests/: test_aggregates.py  utils.py
microservices/customer/tests/test_commands/: test_services.py
microservices/customer/tests/test_queries/: __init__.py  test_services.py
microservices/inventory/: Dockerfile  README.md  config.yml  pyproject.toml
microservices/inventory/src/: __init__.py  aggregates.py  controllers.py  services.py
microservices/inventory/tests/: test_controllers.py  test_services.py
microservices/order/: Dockerfile  README.md  config.py  config.yml  pyproject.toml
microservices/order/src/: __init__.py  aggregates.py  cli.py  controllers.py  sagas.py  services.py
microservices/order/src/commands/: __init__.py  sagas.py  services.py
microservices/order/src/order/: __init__.py  aggregates.py  cli.py  controllers.py  services.py
microservices/order/src/queries/: __init__.py  models.py  repositories.py  services.py
microservices/order/tests/: test_aggregates.py  test_controllers.py  test_services.py  utils.py
microservices/order/tests/test_commands/: test_services.py
microservices/order/tests/test_queries/: test_services.py
microservices/payment/: Dockerfile  Makefile  README.md  config.py  config.yml  pyproject.toml
microservices/payment/src/: __init__.py  __main__.py  aggregates.py  cli.py  controllers.py  services.py
microservices/payment/src/commands/: __init__.py  services.py
microservices/payment/src/payment/: __init__.py  controllers.py
microservices/payment/src/queries/: __init__.py  repositories.py  services.py
microservices/payment/tests/: test_aggregates.py  utils.py
microservices/payment/tests/test_commands/: test_services.py
microservices/payment/tests/test_queries/: test_services.py
microservices/product/: .dockerignore  Dockerfile  README.md  config.py  config.yml  pyproject.toml  run.py
microservices/product/src/: __init__.py  __main__.py  aggregates.py  cli.py  controllers.py  dto.py  gateway.py  services.py
microservices/product/src/commands/: __init__.py  services.py
microservices/product/src/product/: __init__.py  __main__.py  aggregates.py  cli.py  controllers.py  services.py
microservices/product/src/queries/: __init__.py  models.py  repositories.py  services.py
microservices/product/tests/: test_aggregates.py  test_controllers.py  test_gateway.py  test_services.py  utils.py
microservices/product/tests/test_commands/: test_services.py
microservices/product/tests/test_queries/: test_services.py
microservices/review/: .dockerignore  Dockerfile  README.md  config.yml  pyproject.toml
microservices/review/src/: __init__.py  aggregates.py  cli.py
microservices/review/src/commands/: __init__.py  services.py
microservices/review/src/queries/: __init__.py  models.py  repositories.py  services.py
microservices/review/tests/: test_aggregates.py  utils.py
microservices/review/tests/test_commands/: test_services.py
microservices/review/tests/test_queries/: test_services.py
microservices/shipment/: Dockerfile  README.md  config.yml  pyproject.toml  run.py
microservices/shipment/src/: __init__.py  aggregates.py  controllers.py  dto.py  sagas.py  services.py
microservices/ticket/: Dockerfile  README.md  config.py  config.yml  pyproject.toml  setup.cfg
microservices/ticket/src/: __init__.py  aggregates.py  cli.py  controllers.py  sagas.py  services.py
microservices/ticket/src/commands/: __init__.py  sagas.py  services.py
microservices/ticket/src/queries/: __init__.py  models.py  repositories.py  services.py
microservices/ticket/src/ticket/: __init__.py  aggregates.py  cli.py  controllers.py  services.py
microservices/ticket/tests/: test_aggregates.py  utils.py
microservices/user/: Dockerfile  README.md  config.yml  pyproject.toml
microservices/user/src/: __init__.py  aggregates.py  controllers.py  sagas.py  services.py
microservices/user/tests/: test_controllers.py  test_services.py
(+43 files in other folders)
