[tool.poetry]
name = "api_gateway"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
minos-apigateway = { git = "https://github.com/Clariteia/api_gateway.git", rev = "80b3f01434686b274e4a9a7532c831922d5f6a1b" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Flask = "^2.0.1"
requests = "^2.25.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
