[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tavern = "^1.15"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"
