[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = { git = "https://github.com/clariteia/minos_microservice_common.git", rev = "d8ad8c52289c45bce2a75a7c9251350217cbb018" }
minos-microservice-networks = { git = "https://github.com/clariteia/minos_microservice_networks.git", rev = "4a418e60cb0b2c01b1ecd36d7ef4bd2394b3277a" }
minos-microservice-saga = { git = "https://github.com/clariteia/minos_microservice_saga.git", rev = "58c319e17b23b14cdd0877d936fc0587d0326a8a" }
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"