[tool.poetry]
name = "order"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
# minos-microservice-common = "^0.1.3"
minos-microservice-networks = { git = "https://github.com/Clariteia/minos_microservice_networks.git", rev="87067486a31ba9524a367d8375b9aecfa161e3c2" }
minos-microservice-saga = { git = "https://github.com/Clariteia/minos_microservice_saga.git", rev="6e694e6829610f04e0f249e6339e12a50bd9a0b6" }
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"