[tool.poetry]
name = "order"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = { path = "../../../minos_microservice_common/", develop = false }
minos-microservice-networks = { path = "../../../minos_microservice_networks/", develop = false }
minos-microservice-saga = { path = "../../../minos_microservice_saga/", develop = false }
minos-microservice-cqrs = { path = "../../../minos_microservice_cqrs/", develop = false }
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"