[tool.poetry]
name = "product"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = "^0.1.3"
minos-microservice-networks = { git = "https://github.com/Clariteia/minos_microservice_networks.git", rev="bdefd357a233bc129d2d5a705471074bdb0d8293" }
minos-microservice-saga = "^0.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"