[tool.poetry]
name = "shipment"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = { git = "https://github.com/clariteia/minos_microservice_common.git", rev = "bd831f3a96597e61f48a20be8ae3fe4bc4b3dbce" }
minos-microservice-networks = "^0.0"
minos-microservice-saga = "^0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
