[tool.poetry]
name = "ticket"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
minos-microservice-cqrs = "^0.0.1"
minos-microservice-saga = "^0.0.9"
minos-microservice-networks = "^0.0.11"
minos-microservice-common = "^0.1.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"