[tool.poetry]
name = "ticket"
version = "0.1.0"
description = ""
authors = ["Clariteia Devs <devs@clariteia.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
minos-microservice-common = { git = "https://github.com/Clariteia/minos_microservice_common.git", rev="d017cad9f2ca7b618ecd9fe6b2bed7c7d55df81f" }
minos-microservice-networks = ">=0.0.12<0.1"
minos-microservice-saga = ">=0.0.9<0.1"
minos-microservice-cqrs = ">=0.0.1<0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
microservice = "src.cli:main"